make sure onclick event is fired on ios devices

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,3 +1,8 @@
 #map{width:100%;height:300px}
 .label{padding:6px;color:white;background:rgba(0,0,0,0.6)}
-
+a {
+  cursor:pointer;
+}
+.ios_clickable{
+  cursor:pointer;
+}
